<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3bfd6a2b"
        android:orientation="vertical">

        <TextView
            android:id="@id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#616161" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_above="@id/name_text"
            android:text="@string/app_description"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="italic"
            android:textColor="#868683"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title1"
                    android:textColor="#100f0f"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/question_1"
                    android:textColor="#080707"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/question_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/a1_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_1_a" />

                    <RadioButton
                        android:id="@+id/b1_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_1_b" />

                    <RadioButton
                        android:id="@+id/c1_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_1_c" />

                    <RadioButton
                        android:id="@+id/d1_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_1_d" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title2"
                    android:textColor="#100f0f"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/question_2"
                    android:textColor="#080707"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/question_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/a2_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_2_a" />

                    <RadioButton
                        android:id="@+id/b2_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_2_b" />

                    <RadioButton
                        android:id="@+id/c2_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_2_c" />

                    <RadioButton
                        android:id="@+id/d2_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_2_d" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title3"
                    android:textColor="#100f0f"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/question_3"
                    android:textColor="#080707"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/question_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/a3_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_3_a" />

                    <RadioButton
                        android:id="@+id/b3_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_3_b" />

                    <RadioButton
                        android:id="@+id/c3_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_3_c" />

                    <RadioButton
                        android:id="@+id/d3_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/option_3_d" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title4"
                    android:textColor="#100f0f"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/question_4"
                    android:textColor="#080707"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/question_4_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/text_hint"
                    android:inputType="textCapWords"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/title5"
                    android:textColor="#100f0f"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/question_5"
                    android:textColor="#080707"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/question_5_answer_a"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/option_5_a" />

                <CheckBox
                    android:id="@+id/question_5_answer_b"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/option_5_b" />

                <CheckBox
                    android:id="@+id/question_5_answer_c"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/option_5_c" />

                <CheckBox
                    android:id="@+id/question_5_answer_d"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/option_5_d" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="submitAnswer"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>